--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,105 +6,6 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇦🇫_AF_阿富汗
-    type: ss
-    server: 121.127.46.147
-    port: 989
-    password: f8f7aCzcPKbsF8p3
-    cipher: aes-256-cfb
-  - &id002
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 104.26.0.2
-    port: 80
-    cipher: auto
-    uuid: 541ea7b0-23c1-4590-ad1b-18e6f58758d7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@daozhang6666
-      headers:
-        host: usa.daozhang.link
-  - &id003
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
-    type: vmess
-    server: mm3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm3.shabijichang.com
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 89.187.179.192
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 54.76.165.95
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: jd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jd2.shabijichang.com
-  - &id007
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: fhc2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: fhc2.shabijichang.com
-  - &id008
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: wnd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd3.shabijichang.com
-  - &id009
     name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
     server: 45.199.138.191
@@ -119,65 +20,110 @@ proxies:
       path: /path/1696251522438
       headers:
         host: www.42077230.xyz
-  - &id010
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: hdlb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hdlb2.shabijichang.com
-  - &id011
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
-  - &id012
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: asb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: asb2.shabijichang.com
-  - &id013
-    name: 🇺🇸_US_美国_7
+  - &id002
+    name: 🇫🇷_FR_法国_1
     type: ss
-    server: 54.186.250.178
+    server: 51.158.200.72
     port: 443
-    password: amazonskr05
+    password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id014
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+  - &id003
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 51.158.54.209
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id004
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 51.159.221.227
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇵🇰_PK_巴基斯坦
+    type: trojan
+    server: 
+      jp1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: a3f221f8-43d6-4363-8624-ce62d3db0202
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 104.16.181.135
+    server: wnd3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wnd3.shabijichang.com
+  - &id007
+    name: 🇩🇪_DE_德国
+    type: vmess
+    server: 49.13.115.8
+    port: 46818
+    cipher: auto
+    uuid: 42776ed6-aac6-4f94-daa5-c6bd198d09b2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vpnv2rayspeed
+      headers:
+        host: pve-asiatech-1.management.arvancdn.ir
+  - &id008
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 51.159.221.219
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 51.159.222.35
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇫🇷_FR_法国_6
+    type: ss
+    server: 62.210.88.168
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 89.187.181.179
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇫🇷_FR_法国_7
+    type: ss
+    server: 62.210.88.148
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: lt1.992688.xyz
     port: 2052
     cipher: auto
-    uuid: 6963920a-8bb3-4f87-b231-56ccb9f9b3a7
+    uuid: fa5fc74f-0f0b-4221-82ba-dc7cd24e24e5
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -185,8 +131,64 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: vceu3.vpn66.eu.org
+        host: vcus2.vpn66.eu.org
+  - &id014
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: sbl2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
   - &id015
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 172.67.184.13
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id016
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: jd2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: jd2.shabijichang.com
+  - &id017
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 5.161.159.21
+    port: 443
+    cipher: auto
+    uuid: 3d1fab6e-3bd6-472b-8d9c-9934c04eaf40
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id018
     name: 🇺🇸_US_美国_8
     type: vmess
     server: 104.21.75.246
@@ -201,116 +203,106 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id016
+  - &id019
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    type: vmess
+    server: mm2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm2.shabijichang.com
+  - &id020
     name: 🇺🇸_US_美国_9
     type: vmess
-    server: 172.67.184.13
-    port: 80
+    server: 156.225.67.104
+    port: 30000
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id017
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 80
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id018
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: sbl3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl3.shabijichang.com
-  - &id019
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: flkf2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: flkf2.shabijichang.com
-  - &id020
-    name: 🇬🇧_GB_英国_1
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
+    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
+    alterId: 64
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: linkvws
+      path: /path/1696944806961
+      headers:
+        host: www.41758112.xyz
   - &id021
-    name: 🇫🇮_FI_芬兰_1
-    type: trojan
-    server: fi1.connecton.surf
-    port: 443
-    udp: true
-    password: 44c5578a7c
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: ld2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ld2.shabijichang.com
   - &id022
-    name: 🇫🇮_FI_芬兰_2
-    type: trojan
-    server: 37.143.129.56
-    port: 443
-    udp: true
-    password: 44c5578a7c
-    sni: fi1.connecton.surf
+    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
+    type: vmess
+    server: yhnsb3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: yhnsb3.shabijichang.com
   - &id023
-    name: 🇺🇸_US_美国_11
+    name: 🇫🇷_FR_法国_8
     type: trojan
-    server: 209.216.77.26
+    server: 54.36.173.159
     port: 443
     udp: true
-    password: 1b491c39f3
-    sni: usa3.connecton.surf
+    password: e4f288433b
+    sni: pol1.connecton.surf
     skip-cert-verify: true
     network: tcp
   - &id024
-    name: 🇩🇪_DE_德国
-    type: ss
-    server: 80.92.204.106
-    port: 9094
-    password: rpgbNnU9rDDU4aWZ
-    cipher: aes-256-cfb
+    name: 🇫🇷_FR_法国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 156.249.18.4
+    port: 30000
+    cipher: auto
+    uuid: 84d1de11-ce12-4a15-8312-1338356d4ac4
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    servername: www.57424349.xyz
+    network: ws
+    ws-opts:
+      path: /path/1697719506275
   - &id025
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: asb2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: asb2.shabijichang.com
+  - &id026
     name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
     type: vmess
     server: jd3.shabijichang.com
@@ -325,10 +317,10 @@ proxies:
       path: /
       headers:
         host: jd3.shabijichang.com
-  - &id026
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
+  - &id027
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
-    server: mm2.shabijichang.com
+    server: mm3.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -339,42 +331,18 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm2.shabijichang.com
-  - &id027
-    name: 🇬🇧_GB_英国_2
-    type: trojan
-    server: 3.11.11.241
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
+        host: mm3.shabijichang.com
   - &id028
-    name: 🇬🇧_GB_英国_3
-    type: trojan
-    server: 18.169.124.35
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
+    name: 🇷🇴_RO_罗马尼亚
+    type: vmess
+    server: 5.182.37.119
+    port: 12581
+    cipher: auto
+    uuid: 51554d87-7fd0-4dd1-9277-bcbb2d12b64b
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: tcp
-  - &id029
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: 156.225.67.104
-    port: 30000
-    cipher: auto
-    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696944806961
-      headers:
-        host: www.41758112.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -429,7 +397,6 @@ proxy-groups:
       - *id026
       - *id027
       - *id028
-      - *id029
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -463,7 +430,6 @@ proxy-groups:
       - *id026
       - *id027
       - *id028
-      - *id029
   - name: SELECT
     type: select
     proxies:
@@ -495,7 +461,6 @@ proxy-groups:
       - *id026
       - *id027
       - *id028
-      - *id029
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
