--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,22 +6,7 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_1
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 2052
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id002
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
     server: mrb2.shabijichang.com
     port: 80
@@ -35,10 +20,10 @@ proxies:
       path: /
       headers:
         host: mrb2.shabijichang.com
-  - &id003
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+  - &id002
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: ld2.shabijichang.com
+    server: 104.21.75.246
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -49,20 +34,24 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: ld2.shabijichang.com
-  - &id004
-    name: 🇵🇰_PK_巴基斯坦
-    type: trojan
-    server: 
-      us1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: a3f221f8-43d6-4363-8624-ce62d3db0202
-    sni: 13-231-155-134.nhost.00cdn.com
+        host: sbl2.shabijichang.com
+  - &id003
+    name: 🇩🇪_DE_德国_1
+    type: vmess
+    server: 49.13.115.8
+    port: 46818
+    cipher: auto
+    uuid: 42776ed6-aac6-4f94-daa5-c6bd198d09b2
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇺🇸_US_美国_1
+    network: ws
+    ws-opts:
+      path: /vpnv2rayspeed
+      headers:
+        host: pve-asiatech-1.management.arvancdn.ir
+  - &id004
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: 172.67.184.13
     port: 80
@@ -76,154 +65,7 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id006
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-  - &id007
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_2
-    type: vmess
-    server: 104.26.1.116
-    port: 2052
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id008
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 209.216.77.26
-    port: 443
-    udp: true
-    password: 1b491c39f3
-    sni: usa3.connecton.surf
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 108.181.10.17
-    port: 80
-    cipher: auto
-    uuid: 474e8680-701f-11ee-b436-205c6d5f5d78
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /0vixdm74
-      headers:
-        host: teams.microsoft.com
-  - &id010
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
-    type: vmess
-    server: hdlb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hdlb2.shabijichang.com
-  - &id011
-    name: 🇫🇮_FI_芬兰_1
-    type: trojan
-    server: fi1.connecton.surf
-    port: 443
-    udp: true
-    password: 44c5578a7c
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: wnd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd3.shabijichang.com
-  - &id013
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_3
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 80
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id014
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: asb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: asb2.shabijichang.com
-  - &id015
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: sbl3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl3.shabijichang.com
-  - &id016
-    name: 🇫🇮_FI_芬兰_2
-    type: trojan
-    server: 37.143.129.56
-    port: 443
-    udp: true
-    password: 44c5578a7c
-    sni: fi1.connecton.surf
-    skip-cert-verify: true
-    network: tcp
-  - &id017
+  - &id005
     name: 🇺🇸_US_美国->🇩🇪_DE_德国
     type: vmess
     server: flkf2.shabijichang.com
@@ -238,115 +80,10 @@ proxies:
       path: /
       headers:
         host: flkf2.shabijichang.com
-  - &id018
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+  - &id006
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
-    server: 45.199.138.191
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696251522438
-      headers:
-        host: www.42077230.xyz
-  - &id019
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: jd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jd2.shabijichang.com
-  - &id020
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_4
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 8880
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id021
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_5
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 2082
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id022
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 104.26.0.2
-    port: 80
-    cipher: auto
-    uuid: 541ea7b0-23c1-4590-ad1b-18e6f58758d7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@daozhang6666
-      headers:
-        host: usa.daozhang.link
-  - &id023
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_6
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 2086
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id024
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_7
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 8080
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id025
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: fhc2.shabijichang.com
+    server: mm2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -357,7 +94,180 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: fhc2.shabijichang.com
+        host: mm2.shabijichang.com
+  - &id007
+    name: 🇫🇷_FR_法国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 156.249.18.4
+    port: 30000
+    cipher: auto
+    uuid: 84d1de11-ce12-4a15-8312-1338356d4ac4
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+  - &id008
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 13.37.163.17
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 156.225.67.104
+    port: 30000
+    cipher: auto
+    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696944806961
+      headers:
+        host: www.41758112.xyz
+  - &id010
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: wnd3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wnd3.shabijichang.com
+  - &id011
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    type: vmess
+    server: 104.17.18.26
+    port: 80
+    cipher: auto
+    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: a.109420.xyz
+  - &id012
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 5.161.159.21
+    port: 443
+    cipher: auto
+    uuid: 3d1fab6e-3bd6-472b-8d9c-9934c04eaf40
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id013
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
+    type: vmess
+    server: hdlb2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hdlb2.shabijichang.com
+  - &id014
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 3.66.186.194
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id015
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_4
+    type: vmess
+    server: mm3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm3.shabijichang.com
+  - &id016
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: wnd2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wnd2.shabijichang.com
+  - &id017
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 45.199.138.186
+    port: 30000
+    cipher: auto
+    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696682720138
+      headers:
+        host: www.19229362.xyz
+  - &id018
+    name: 🇺🇸_US_美国->🇭🇺_HU_匈牙利
+    type: vmess
+    server: www.speedtest.net
+    port: 80
+    cipher: auto
+    uuid: 62515af2-1dd9-467b-9dd3-774abefb6a62
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hu1.xv2ray.net
+  - &id019
+    name: 🇵🇰_PK_巴基斯坦
+    type: trojan
+    server: 
+      hk1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: a3f221f8-43d6-4363-8624-ce62d3db0202
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -403,12 +313,6 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -433,12 +337,6 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -461,12 +359,6 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
